--- a/config/nginx/https.conf
+++ b/config/nginx/https.conf
@@ -1,5 +1,5 @@
-ssl_certificate keys/{{ .Values.domainName }}.crt;
-ssl_certificate_key keys/{{ .Values.domainName }}.key;
+ssl_certificate keys/{{ .Values.domainName }}.{{ .Values.tld }}.crt;
+ssl_certificate_key keys/{{ .Values.domainName }}.{{ .Values.tld }}.key;
 
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3;
 ssl_ciphers HIGH:!aNULL:!MD5;
