--- a/config/authelia/configuration.yaml
+++ b/config/authelia/configuration.yaml
@@ -23,7 +23,7 @@ authentication_backend:
     implementation: custom
     url: ldap://openldap
     timeout: 30s
-    start_tls: false
+    start_tls: true
     base_dn: dc=kwkaiser,dc=io
     additional_users_dn: ou=people
     users_filter: ({username_attribute}={input})
