--- a/templates/openldap/depl.yaml
+++ b/templates/openldap/depl.yaml
@@ -17,15 +17,6 @@ spec:
         - name: data
           persistentVolumeClaim:
             claimName: bulk-nfs
-        
-        {{- range $name := list "ldap-ca-crt" "ldap-crt" "ldap-key" "ldap-dhparam" }}
-        - name: {{$name}}
-          secret:
-            secretName: {{ regexReplaceAll "-" $name "." }}
-            items:
-              - key: value
-                path: value
-        {{- end }}
 
       containers:
         - name: openldap
@@ -37,24 +28,6 @@ spec:
           args: ["--loglevel", "debug", "--copy-service"]
 
           env:
-            # - name: LDAP_ADMIN_USERNAME
-            #   value: admin
-
-            # - name: LDAP_ADMIN_PASSWORD
-            #   value: password
-
-            # - name: LDAP_ROOT
-            #   value: dc={{ .Values.domainName }},dc={{ .Values.tld }}
-
-            # - name: LDAP_ADMIN_DN
-            #   value: cn=admin,dc={{ .Values.domainName }},dc={{ .Values.tld }}
-
-            # - name: LDAP_PORT_NUMBER
-            #   value: "389"
-
-            # - name: LDAP_SKIP_DEFAULT_TREE
-            #   value: "yes"
-
             - name: LDAP_ORGANISATION
               value: {{ .Values.domainName }}.{{ .Values.tld }}
 
@@ -63,24 +36,15 @@ spec:
 
             - name: LDAP_ADMIN_PASSWORD
               value: password
-
-            # - name: LDAP_TLS_CRT_FILENAME
-            #   value: {{ .Values.domainName }}.{{ .Values.tld }}.crt
-
-            # - name: LDAP_TLS_CA_CRT_FILENAME
-            #   value: {{ .Values.domainName }}.{{ .Values.tld }}.ca.crt
-
-            # - name: LDAP_TLS_KEY_FILENAME
-            #   value: {{ .Values.domainName }}.{{ .Values.tld }}.key
             
             - name: LDAP_REQUIRE_STARTTLS
-              value: "true"
+              value: "false"
 
             - name: HOSTNAME
               value: openldap
 
             - name: LDAP_TLS
-              value: "true"
+              value: "false"
 
           volumeMounts:
             - name: data
@@ -90,25 +54,5 @@ spec:
             - name: data 
               mountPath: /etc/ldap/slapd.d
               subPath: application/openldap/slapd
-
-            - name: ldap-ca-crt
-              mountPath: /container/service/slapd/assets/certs/ca.crt
-              subPath: value
-              readOnly: false
-
-            - name: ldap-crt
-              mountPath: /container/service/slapd/assets/certs/ldap.crt
-              subPath: value
-              readOnly: false
-
-            - name: ldap-key
-              mountPath: /container/service/slapd/assets/certs/ldap.key
-              subPath: value
-              readOnly: false
-
-            - name: ldap-dhparam
-              mountPath: /container/service/slapd/assets/certs/dhparam.pem
-              subPath: value
-              readOnly: false
 
             
