--- a/config/nginx/conf.d/trackers.conf
+++ b/config/nginx/conf.d/trackers.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name scurvy.*;
+  server_name trackers.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
@@ -10,9 +10,12 @@ server {
   include authelia-location.conf;
 
   location / {
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection $http_connection;
+
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://piracy;
+    proxy_pass http://piracy:9696;
   }
 }
