--- a/templates/piracy/svc.yaml
+++ b/templates/piracy/svc.yaml
@@ -8,5 +8,26 @@ spec:
     app.kubernetes.io/name: piracy
   ports:
     - protocol: TCP
-      port: 80
+      name: qbittorrent
+      port: 8080
       targetPort: 8080
+
+    - protocol: TCP
+      name: radarr
+      port: 7878
+      targetPort: 7878
+
+    - protocol: TCP
+      name: sonarr
+      port: 8989
+      targetPort: 8989
+
+    - protocol: TCP
+      name: prowlarr
+      port: 9696
+      targetPort: 9696
+
+    - protocol: TCP
+      name: autobrr
+      port: 7474
+      targetPort: 7474
