--- a/templates/nginx/depl.yaml
+++ b/templates/nginx/depl.yaml
@@ -65,4 +65,9 @@ spec:
         {{ include "waitFor" (dict "Name" "authelia" "Port" 80) }}
         {{ include "waitFor" (dict "Name" "ldap-user-manager" "Port" 80) }}
         {{ include "waitFor" (dict "Name" "jellyfin" "Port" 80) }}
+        {{ include "waitFor" (dict "Name" "piracy" "Port" 8080) }}
+        {{ include "waitFor" (dict "Name" "piracy" "Port" 7878) }}
+        {{ include "waitFor" (dict "Name" "piracy" "Port" 8989) }}
+        {{ include "waitFor" (dict "Name" "piracy" "Port" 9696) }}
+        {{ include "waitFor" (dict "Name" "piracy" "Port" 7474) }}
       
