--- a/templates/miniflux/svc.yaml
+++ b/templates/miniflux/svc.yaml
@@ -8,5 +8,11 @@ spec:
     app.kubernetes.io/name: miniflux
   ports:
     - protocol: TCP
+      name: miniflux-client
       port: 80
       targetPort: 8080
+
+    - protocol: TCP
+      name: miniflux-db
+      port: 5432
+      targetPort: 5432
