beginning of claibre setup, getting 502

--- a/templates/calibre/depl.yaml
+++ b/templates/calibre/depl.yaml
@@ -24,9 +24,9 @@ spec:
           ports:
             - containerPort: 8083
 
-          env:
-            - name: DOCKER_MODS
-              value: linuxserver/mods:universal-calibre
+          # env:
+          #   - name: DOCKER_MODS
+          #     value: linuxserver/mods:universal-calibre
 
           volumeMounts:
             - name: data
