Deployment that's starting

--- a/templates/steam/depl.yaml
+++ b/templates/steam/depl.yaml
@@ -90,6 +90,7 @@ spec:
             #   - name: dshm
             #     mountPath: /dev/shm
 
+          volumeMounts:
             - name: data
               mountPath: /home/default
               subPath: application/steam/home
