--- a/templates/steam/depl.yaml
+++ b/templates/steam/depl.yaml
@@ -22,11 +22,15 @@ spec:
           persistentVolumeClaim:
             claimName: bulk-nfs
 
+        - name: dshm
+          emptyDir:
+            medium: Memory
+
       containers:
         - name: steam
           securityContext:
             privileged: true
-          image: josh5/steam-headless:latest
+          image: lscr.io/linuxserver/steamos:latest
           resources: #Change CPU and Memory below
             requests:
               memory: "1G"
@@ -36,76 +40,35 @@ spec:
               cpu: "1"
               #nvidia.com/gpu: 1 #If you're using a nvidia GPU, add it here
 
+          ports:
+            - containerPort: 3000
+            - containerPort: 3001
+
           env: #Environmental Vars
-            - name: NAME
-              value: "SteamHeadless"
-            - name: TZ
-              value: "America/New_York"
-            - name: USER_LOCALES
-              value: "en_US.UTF-8 UTF-8"
-            - name: DISPLAY
-              value: ":55"
-            - name: SHM_SIZE
-              value: "2G"
-            - name: DOCKER_RUNTIME
-              value: "nvidia"
             - name: PUID
               value: "1000"
             - name: PGID
               value: "1000"
-            - name: UMASK
-              value: "000"
-            - name: USER_PASSWORD
-              value: "password" #changeme
-            - name: MODE
-              value: "primary"
-            - name: WEB_UI_MODE
-              value: "none"
-            - name: ENABLE_VNC_AUDIO
-              value: "false"
-            - name: PORT_NOVNC_WEB
-              value: "8083"
-            - name: NEKO_NAT1TO1
-              value: ""
-            - name: ENABLE_SUNSHINE
-              value: "true"
-            - name: SUNSHINE_USER
-              value: "sam"
-            - name: SUNSHINE_PASS
-              value: "password"
-            - name: ENABLE_EVDEV_INPUTS
-              value: "true"
-            # - name: NVIDIA_DRIVER_CAPABILITIES
-            #   value: "all"
-            # - name: NVIDIA_VISIBLE_DEVICES
-            #   value: "all"
-
-            # volumeMounts:
-            #   - name: home-dir
-            #     mountPath: /home/default/
-            #   - name: games-dir
-            #     mountPath: /mnt/games/
-            #   - name: input-devices
-            #     mountPath: /dev/input/
-            #   - name: dshm
-            #     mountPath: /dev/shm
+            - name: TZ
+              value: Etc/UTC
+            - name: DRINODE
+              value: /dev/dri/renderD128
+            - name: STARTUP
+              value: KDE #optional
+            - name: RESOLUTION
+              value: 1920x1080 #optional
 
           volumeMounts:
             - name: data
-              mountPath: /home/default
-              subPath: application/steam/home
+              mountPath: /config
+              subPath: application/steam/config
 
             - name: data
-              mountPath: /mnt/games
-              subPath: application/steam/games
+              mountPath: /dev/dri
+              subPath: application/steam/dev
 
-            - name: data
-              mountPath: /dev/input
-              subPath: application/steam/input
-
-            - name: data
+            - name: dshm
               mountPath: /dev/shm
-              subPath: application/steam/shm
 
       # volumes:
       #   - name: home-dir
