Move read to books, setup authelia on games and books endpoint

--- a/config/nginx/conf.d/books.conf
+++ b/config/nginx/conf.d/books.conf
@@ -2,7 +2,7 @@ server {
   listen 443 ssl;
   include https.conf;
 
-  server_name games.*;
+  server_name books.*;
 
   fastcgi_buffers 16 16k;
   fastcgi_buffer_size 32k;
@@ -16,6 +16,6 @@ server {
     include authelia-proxy.conf;
     include authelia-endpoint.conf;
 
-    proxy_pass http://steam;
+    proxy_pass http://calibre;
   }
 }
