Try passing in runner arg through envar

--- a/config/gitea/app.ini
+++ b/config/gitea/app.ini
@@ -97,5 +97,5 @@ DEFAULT_MERGE_STYLE = merge
 [repository.signing]
 DEFAULT_TRUST_MODEL = committer
 
-; [oauth2]
-; JWT_SECRET = T71OXyhzm9KGkHDYtiRhhsJrIb4a7AMcr3nPVIS30UA
+[oauth2]
+JWT_SECRET = T71OXyhzm9KGkHDYtiRhhsJrIb4a7AMcr3nPVIS30UA
