--- a/templates/miniflux/depl.yaml
+++ b/templates/miniflux/depl.yaml
@@ -37,7 +37,7 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /var/lib/postgresql/data
-              subPath: application/minifluxdb
+              subPath: application/miniflux
 
         - name: miniflux
           image: miniflux/miniflux:latest
