--- a/templates/calibre/depl.yaml
+++ b/templates/calibre/depl.yaml
@@ -20,7 +20,7 @@ spec:
 
       containers:
         - name: calibre
-          image: lscr.io/linuxserver/calibre-web
+          image: linuxserver/calibre-web:0.6.21
           ports:
             - containerPort: 8083
 
