--- a/config/renovate/config.json
+++ b/config/renovate/config.json
@@ -7,5 +7,6 @@
   "platform": "gitea",
   "token": "c683ed4893078b0b9f5cc48c5b32450eacc53ef6",
   "endpoint": "http://gitea",
-  "gitUrl": "http://gitea"
+  "gitUrl": "http://gitea",
+  "gitAuthor": "Renovate Bot <bot@renovateapp.com>"
 }
