--- a/templates/gitea/renovate/depl.yaml
+++ b/templates/gitea/renovate/depl.yaml
@@ -45,4 +45,5 @@ spec:
               subPath: config.json
               readOnly: false
 
-      initContainers: { { include "waitFor" (dict "Name" "gitea" "Port" 80) } }
+      initContainers: 
+        {{ include "waitFor" (dict "Name" "gitea" "Port" 80)}}
