--- a/templates/gitea/runner/depl.yaml
+++ b/templates/gitea/runner/depl.yaml
@@ -46,4 +46,5 @@ spec:
               mountPath: /data
               subPath: application/gitea/runner
 
-      initContainers: { { include "waitFor" (dict "Name" "gitea" "Port" 80) } }
+      initContainers: 
+        {{ include "waitFor" (dict "Name" "gitea" "Port" 80) }}
