--- a/templates/gitea/renovate/depl.yaml
+++ b/templates/gitea/renovate/depl.yaml
@@ -27,7 +27,7 @@ spec:
 
       containers:
         - name: gitea-renovate
-          image: renovate/renovate:37.33-full
+          image: renovate/renovate:latest
 
           env:
             - name: LOG_LEVEL
