--- a/templates/jellyfin/depl.yaml
+++ b/templates/jellyfin/depl.yaml
@@ -20,7 +20,7 @@ spec:
 
       containers:
         - name: jellyfin
-          image: jellyfin/jellyfin:20231025.26-unstable
+          image: linuxserver/jellyfin:latest
           ports:
             - containerPort: 8096
 
