--- a/templates/openldap/app/depl.yaml
+++ b/templates/openldap/app/depl.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: ldap-user-manager
-          image: wheelybird/ldap-user-manager:v1.11
+          image: wheelybird/ldap-user-manager:latest
           ports:
             - containerPort: 80
           env:
