--- a/values.yaml
+++ b/values.yaml
@@ -1,4 +1,20 @@
 domainName: kwkaiser-test
 tld: io
 piracyIp: "143.244.47.87"
-image_jellyfin: "linuxserver/jellyfin:1.0.0"
+image_jellyfin: "linuxserver/jellyfin:2021.12.16"
+image_nginx: "nginx:1.0.0"
+image_wireguard: "linuxserver/wireguard:1.0.0"
+image_qbittorrent: "linuxserver/qbittorrent:1.0.0"
+image_radarr: "linuxserver/radarr:1.0.0"
+image_sonarr: "linuxserver/sonarr:1.0.0"
+image_prowlarr: "linuxserver/prowlarr:1.0.0"
+image_autobrr: "ghcr.io/autobrr/autobrr:1.0.0"
+image_ldap_user_manager: "wheelybird/ldap-user-manager:1.0.0" 
+image_openldap: "osixia/openldap:1.0.0"
+image_miniflux_db: "postgres:1.0.0"
+image_miniflux: "miniflux/miniflux:1.0.0"
+image_gitea_runner: "gitea/act_runner:1.0.0"
+image_gitea_renovate: "renovate/renovate:1.0.0"
+image_gitea: "gitea/gitea:1.0.0"
+image_calibre: "linuxserver/calibre-web:1.0.0"
+image_authelia: "authelia/authelia:1.0.0"
